# sqlite-s3vfs

./: README.md  pyproject.toml  requirements-dev.in  requirements-dev.txt  s3vfs.py  setup.py  sqlite_s3vfs.py  start-minio.sh  start-services.sh  stop-services.sh  test.py  test_sqlite_s3vfs.py
.circleci/: config.yml
.github/workflows/: deploy-package-to-pypi.yml  publish-pypi.yml  test.yml
