[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sqlite-s3vfs"
version = "0.0.0.dev0"
authors = [
  { name="Department for International Trade", email="sre@digital.trade.gov.uk" },
]
description = "Virtual filesystem for SQLite to read from and write to S3"
readme = "README.md"
requires-python = ">=3.7.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Database",
]
dependencies = [
    "boto3>=1.18.51",
    "apsw>=3.43.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.2.5",
    "pytest-cov>=3.0.0",
]

[project.urls]
"Homepage" = "https://github.com/uktrade/sqlite-s3vfs"

[tool.hatch.build]
include = [
  "sqlite_s3vfs.py",
]
